--- a/react_frontend/index.html
+++ b/react_frontend/index.html
@@ -8,6 +8,25 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script>
+      /*    
+        @licstart Licenca para os script na página
+
+        Copyright © 2023 Mateus Felipe da Silveira Vieira, Thiago Baptista da Silva Soares, Heloísa Real.
+
+        The JavaScript code in this page is free software: you can
+        redistribute it and/or modify it under the terms of the GNU
+        General Public License (GNU GPL) as published by the Free Software
+        Foundation, either version 3 of the License, or (at your option)
+        any later version.  The code is distributed WITHOUT ANY WARRANTY;
+        without even the implied warranty of MERCHANTABILITY or FITNESS
+        FOR A PARTICULAR PURPOSE.  See the GNU GPL for more details.
+
+        @licend
+        */
+    </script>
+
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"></script>
   </body>
